[tool.poetry]
name = "ahc033"
version = "0.1.0"
description = ""
authors = ["terry-u16 <terry-u16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
plotly = "^5.22.0"
pandas = "^2.2.2"
scipy = "^1.13.1"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
